applications/repo/deployment.yaml
# Deployment for repo service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: repo-server
spec:
  template:
    metadata:
      labels:
        app: repo-nginx-pod
    spec:
      containers:
        - name: repo-nginx
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nginx-extras:1.20.0-with-sshd-repo
          volumeMounts:
            - mountPath: /repo/mindspore
              name: data-volume
            - mountPath: /etc/rsyncd.secrets.ro
              name: website-secrets-volume
              subPath: rsyncd_secrets
            - name: website-secrets-volume
              mountPath: /etc/nginx/conf/basic_auth_files
              subPath: auth_files
          resources:
            requests:
              cpu: 4000m
              memory: 6000Mi
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /repo/mindspore
              exec nginx -g "daemon off;"
        - name: rsync-server
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/rsyncd:0.0.5
          volumeMounts:
            - mountPath: /etc/rsyncd.conf
              name: repo-nginx-configmap-volume
              subPath: rsyncd.conf
            - mountPath: /etc/rsyncd.secrets.ro
              name: website-secrets-volume
              subPath: rsyncd_secrets
            - mountPath: /repo/mindspore
              name: data-volume
            - mountPath: /root/.ssh/authorized_keys.ro
              name: repo-nginx-configmap-volume
              subPath: ssh.pub
          resources:
            requests:
              cpu: 4000m
              memory: 6000Mi
      volumes:
        - name: website-secrets-volume
          secret:
            secretName: website-secrets
        - name: data-volume
          persistentVolumeClaim:
            claimName: mindspore-data-volume
